--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
   /* background-size: cover;  */
   margin: -31px; 
   margin-left:-7px;
-  border: 6px solid rgba(0, 77, 64, 0.4); 
+  border: 6px solid rgba(11, 11, 20, 0.4); 
   border-radius: 50% !important;
 }
 
@@ -85,7 +85,7 @@
   position: relative;
   padding: 11px 35px;
   background: #fff;
-  color: #2d2e2e;
+  color: #6b7272;
   border: 2px solid #fff;
   font-weight: 600;
   font-size: 15px;
