--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@
   position: relative;
   padding: 11px 35px;
   background: #fff;
-  color: #6b7272;
+  color: #aaafaf;
   border: 2px solid #fff;
   font-weight: 600;
   font-size: 15px;
@@ -116,7 +116,7 @@
 }
 
 .contactme:hover{
-  color: 2d2e2e;
+  color: #2d2e2e;
   background-color: white;
 }
 /* main body */
@@ -320,7 +320,7 @@ h3 {
 } */
 
 #intro.section {
-  background: #4c5f70 repeat;
+  background: #bfd9f0 repeat;
   position: relative;
 }
 
