--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,9 +357,9 @@ h3 {
 
 .overlay {
   background-color: rgba(0, 0, 0, 0.4);
-  height: 100%;
+  height: 50%;
   left: 0;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
 }
